--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
     "rules": {
         "react/react-in-jsx-scope": "off",
         "@typescript-eslint/explicit-function-return-type": "warn",
-        "@typescript-eslint/no-floating-promises": "off"
+        "@typescript-eslint/no-floating-promises": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "warn"
     }
 }
